@@ -54,6 +54,7 @@ along with GCC; see the file COPYING3.  If not see
 #include "tree-pass.h"
 #include "sese.h"
 #include "tree-ssa-propagate.h"
+#include "cp/cp-tree.h"
 
 #ifdef HAVE_cloog
 #include "graphite-poly.h"
@@ -215,6 +216,14 @@ static bool
 graphite_can_represent_scev (tree scev)
 {
   if (chrec_contains_undetermined (scev))
+    return false;
+
+  /* We disable the handling of pointer types, because it’s currently not
+     supported by Graphite with the ISL AST generator. SSA_NAME nodes are
+     the only nodes, which are disabled in case they are pointers to object
+     types, but this can be changed.  */
+
+  if (TYPE_PTROB_P (TREE_TYPE (scev)) && TREE_CODE (scev) == SSA_NAME)
     return false;
 
   switch (TREE_CODE (scev))
