@@ -1,3 +1,10 @@
+2014-08-14  Roman Gareev  <gareevroman@gmail.com>
+
+	* graphite-scop-detection.c:
+	Add inclusion of cp-tree.h.
+	(graphite_can_represent_scev): Disables the handling of SSA_NAME nodes
+	in case they are pointers to object types
+
 2014-08-14  Richard Biener  <rguenther@suse.de>
 
 	* BASE-VER: Change to 5.0.0
